--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -6,3 +6,9 @@ date: "2021-12-14"
 Hello, I am _Post One._
 
 **Nice to meet you!**
+
+| | Parientes self tree   | Parientes not self tree   | No parientes azar | No parientes con probabilidad
+| - | - | - | - | - |
+| misma edad      | | | | |
+| de mayor a menor  | | | |
+| de menor a mayor  | | | |
