--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -7,8 +7,8 @@ Hello, I am _Post One._
 
 **Nice to meet you!**
 
-| | Parientes self tree   | Parientes not self tree   | No parientes azar | No parientes con probabilidad
-| - | - | - | - | - |
-| misma edad      | | | | |
-| de mayor a menor  | | | |
-| de menor a mayor  | | | |
+| | Parientes self tree   | Parientes not self tree   | No parientes azar | No parientes con probabilidad (relación entre característica c y acción i) | No parientes con probabilidad (se observa i en sujeto a)
+| - | - | - | - | - | - |
+| misma edad      | | | | | |
+| de mayor a menor  | | | | |
+| de menor a mayor  | | | | |
