--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -1,14 +1,21 @@
 ---
-title: Post One
-date: "2021-12-14"
+title: Primeras definiciones
+date: "2022-06-03"
+author: codelrond
 ---
+### Definición inicial:
 
-Hello, I am _Post One._
+Si _a_ actúa en forma _i_ sobre _b_, podemos:
 
-**Nice to meet you!**
+- 0 probabilidad que _b_ tenga el determinante _i_
 
-| | Parientes self tree   | Parientes not self tree   | No parientes azar | No parientes con probabilidad (relación entre característica c y acción i) | No parientes con probabilidad (se observa i en sujeto a)
-| - | - | - | - | - | - |
-| misma edad      | | | | | |
-| de mayor a menor  | | | | |
-| de menor a mayor  | | | | |
+    la reaparición de _i_ viene por descendencia de _a_
+
+- probabilidad > 0 que _b_ tenga el determinante _i_
+
+    la reaparición de _i_ puede venir por descendencia de _a_ ó _b_. Un caso particular es que _a_ no tenga descendencia.
+
+### Sobre "La acción que más produce réplica de mis genes."
+
+Si _a_ actúa en forma _i_, _a'_ puede actuar en forma _j_. Conviene ver las producciones de _i_ y _j_, pero tengamos en cuenta que no se puede decir que comparamos si _a_ hace _i_ entonces tal resultado pero si hace _j_ tal resultado y vemos la mayor producción de _a_ o de los genes de _a_. No, _a_ hace _i_ y _a'_ hace _j_. Eso es lo que hay que comparar.
+
