fixed sobre la replica de mis genes

--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -17,5 +17,5 @@ Si _a_ actúa en forma _i_ sobre _b_, podemos:
 
 ### Sobre "La acción que más produce réplica de mis genes."
 
-Si _a_ actúa en forma _i_, _a'_ puede actuar en forma _j_. Conviene ver las producciones de _i_ y _j_, pero tengamos en cuenta que no se puede decir que comparamos si _a_ hace _i_ entonces tal resultado pero si hace _j_ tal resultado y vemos la mayor producción de _a_ o de los genes de _a_. No, _a_ hace _i_ y _a'_ hace _j_. Eso es lo que hay que comparar.
+Si _a_ actúa en forma _i_, _a'_ puede actuar en forma alternativa _j_. Conviene ver las producciones de _i_ y _j_, pero tengamos en cuenta que no se puede decir "si _a_ hace _i_ entonces tal resultado pero si hace _j_ tal otro resultado" y comparamos entonces la mayor producción de los genes de _a_. No, _a_ hace _i_ y _a'_ hace _j_. Eso es lo que hay que comparar.
 
