--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -3,6 +3,18 @@ title: Primeras definiciones
 date: "2022-06-03"
 author: codelrond
 ---
+
+<script>
+import G from './_g.svelte'
+</script>
+
+<G>
+graph LR
+A-->B
+</G>
+
+[![Gitter](https://badges.gitter.im/logic-replication/community.svg)](https://gitter.im/logic-replication/community?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge)
+
 ### Definición inicial:
 
 Si _a_ actúa en forma _i_ sobre _b_, podemos:
@@ -17,5 +29,13 @@ Si _a_ actúa en forma _i_ sobre _b_, podemos:
 
 ### Sobre "La acción que más produce réplica de mis genes."
 
-Si _a_ actúa en forma _i_, _a'_ puede actuar en forma alternativa _j_. Conviene ver las producciones de _i_ y _j_, pero tengamos en cuenta que no se puede decir "si _a_ hace _i_ entonces tal resultado pero si hace _j_ tal otro resultado" y comparamos entonces la mayor producción de los genes de _a_. No, _a_ hace _i_ y _a'_ hace _j_. Eso es lo que hay que comparar.
+Si _a_ actúa en forma _i_, _a'_ puede actuar en forma alternativa _j_. Conviene ver las producciones de _i_ y _j_, pero tengamos en cuenta que no se puede decir "si _a_ hace _i_ entonces tenemos tal producción de sus genes pero si hace _j_ tenemos tal producción de sus genes. No, _a_ hace _i_ y tiene el determinante _i_, _a'_ hace _j_ y tiene el determinante _j_, y _a_ es distinto a _a'_, por lo que no existe tal cosa como la producción de los genes de _a_ que puede elegir entre _i_ y _j_.
+
+La diferencia es crucial, pues del segundo supuesto se deduce que se ayuda a un grupo de parientes si la relación de parentesco es mayor que si por ejemplo se optara por la propia reproducción. "Daría mi vida por dos hermanos o cuatro primos".
+
+Para el primer supuesto, como se comparan el determinante _i_ con el determinante _j_, lo que importa es la relación de producción _i/j_ cuando ocurre el evento _e_ que dispara _i_ ó _j_ respecto de _i/j_ cuando no ocurre el evento. Así, cuando ocurre _e_ aparece lo que llamamos una burbuja de probabilidad. Supongamos que hay un 20% de determinante _i_ y un 80% de determinante _j_ en la población. Ocurre _e_ y aparece una burbuja de probabilidad donde _i_ es un 25% y _j_ un 75%. El evento _e_ hace que _i_ gane terreno a _j_, independientemente de la relación de parentesco del segundo supuesto.
+
+### Programas
+
+Decimos que _a<sub>1</sub>_ y _a<sub>2</sub>_ son instancias del programa _p_, _b<sub>1</sub>_ y _b<sub>2</sub>_ son instancias del programa _q_.
 
