--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -29,11 +29,9 @@ Si _a_ actúa en forma _i_ sobre _b_, podemos:
 
 ### Sobre "La acción que más produce réplica de mis genes."
 
-Si _a_ actúa en forma _i_, _a'_ puede actuar en forma alternativa _j_. Conviene ver las producciones de _i_ y _j_, pero tengamos en cuenta que no se puede decir "si _a_ hace _i_ entonces tenemos tal producción de sus genes pero si hace _j_ tenemos tal producción de sus genes. No, _a_ hace _i_ y tiene el determinante _i_, _a'_ hace _j_ y tiene el determinante _j_, y _a_ es distinto a _a'_, por lo que no existe tal cosa como la producción de los genes de _a_ que puede elegir entre _i_ y _j_.
+Ante el evento _e_: Si x hace i entonces s<sub>i</sub> = sum x, si hace j entonces s<sub>j</sub> = sum x. Como debemos saber cuál es más probable observar y dado que hemos planteado el problema tal que sólo hay s<sub>i</sub> y s<sub>j</sub>, el resultado se debe decantar por el mayor de los sumatorios.
 
-La diferencia es crucial, pues del segundo supuesto se deduce que se ayuda a un grupo de parientes si la relación de parentesco es mayor que si por ejemplo se optara por la propia reproducción. "Daría mi vida por dos hermanos o cuatro primos".
-
-Para el primer supuesto, como se comparan el determinante _i_ con el determinante _j_, lo que importa es la relación de producción _i/j_ cuando ocurre el evento _e_ que dispara _i_ ó _j_ respecto de _i/j_ cuando no ocurre el evento. Así, cuando ocurre _e_ aparece lo que llamamos una burbuja de probabilidad. Supongamos que hay un 20% de determinante _i_ y un 80% de determinante _j_ en la población. Ocurre _e_ y aparece una burbuja de probabilidad donde _i_ es un 25% y _j_ un 75%. El evento _e_ hace que _i_ gane terreno a _j_, independientemente de la relación de parentesco del segundo supuesto.
+Pero el problema es que si partimos del determinismo, entonces ante el evento _e_, el determinante _i_ implica acción _i_ y el determinante _j_ implica acción _j_. En este caso lo importante es saber la producción de _i_ y _j_ con y sin evento _e_. Y eso depende de las relaciones de _i_ y _j_ en la población y la relación cuando ocurre _e_, en la llamada burbuja de probabilidad.
 
 ### Programas
 
