--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -4,15 +4,6 @@ date: "2022-06-03"
 author: codelrond
 ---
 
-<script>
-import G from './_g.svelte'
-</script>
-
-<G>
-graph LR
-A-->B
-</G>
-
 [![Gitter](https://badges.gitter.im/logic-replication/community.svg)](https://gitter.im/logic-replication/community?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge)
 
 ### Definición inicial:
@@ -29,9 +20,9 @@ Si _a_ actúa en forma _i_ sobre _b_, podemos:
 
 ### Sobre "La acción que más produce réplica de mis genes."
 
-Ante el evento _e_: Si x hace i entonces s<sub>i</sub> = sum x, si hace j entonces s<sub>j</sub> = sum x. Como debemos saber cuál es más probable observar y dado que hemos planteado el problema tal que sólo hay s<sub>i</sub> y s<sub>j</sub>, el resultado se debe decantar por el mayor de los sumatorios.
+Ante el evento _e_: Si _x_ hace _i_ entonces s<sub>i</sub> = sum _x_ producidos por _i_, si hace _j_ entonces s<sub>j</sub> = sum _x_ producidos por _j_. Como debemos saber cuál es más probable observar y dado que es independiente de la relación de _x_ respecto del total de la población el resultado se debe decantar por el mayor de los sumatorios.
 
-Pero el problema es que si partimos del determinismo, entonces ante el evento _e_, el determinante _i_ implica acción _i_ y el determinante _j_ implica acción _j_. En este caso lo importante es saber la producción de _i_ y _j_ con y sin evento _e_. Y eso depende de las relaciones de _i_ y _j_ en la población y la relación cuando ocurre _e_, en la llamada burbuja de probabilidad.
+Pero el problema es que si partimos del determinismo, entonces ante el evento _e_, el determinante _i_ implica acción _i_ y el determinante _j_ implica acción _j_. En este caso lo importante es saber la producción de _i_ y _j_ con y sin evento _e_. Y eso depende de las relaciones de _i_ y _j_ en la población y la relación cuando ocurre _e_, en la llamada burbuja de relación.
 
 ### Programas
 
