--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -20,9 +20,9 @@ Si _a_ actúa en forma _i_ sobre _b_, podemos:
 
 ### Sobre "La acción que más produce réplica de mis genes."
 
-Ante el evento _e_: Si _x_ hace _i_ entonces s<sub>i</sub> = sum _x_ producidos por _i_, si hace _j_ entonces s<sub>j</sub> = sum _x_ producidos por _j_. Como debemos saber cuál es más probable observar y dado que es independiente de la relación de _x_ respecto del total de la población el resultado se debe decantar por el mayor de los sumatorios.
+Ante el evento _e_: Si _x_ hace _i_ entonces tenemos una producción de _x_, y si hace _j_ entonces tenemos otra producción de x. Para _i_ tenemos un coste C (la producción que se pierde por no hacerse _j_) y un beneficio B que es la producción por hacerse _i_. Según la teoría del gen egoista B > C es condición necesaria para que se observe _i_. Demostraremos que esto no es cierto.
 
-Pero el problema es que si partimos del determinismo, entonces ante el evento _e_, el determinante _i_ implica acción _i_ y el determinante _j_ implica acción _j_. En este caso lo importante es saber la producción de _i_ y _j_ con y sin evento _e_. Y eso depende de las relaciones de _i_ y _j_ en la población y la relación cuando ocurre _e_, en la llamada burbuja de relación.
+El problema es que si partimos del determinismo, entonces ante el evento _e_, el determinante _i_ (ya no hablamos de _x_ sino de _a_) implica acción _i_ y el determinante _j_ (_b_) implica acción _j_. Hay una producción de _a_, que es el B anterior, y una producción de _b_ que es el C anterior. Y dada una población con 30% de _a_ y 70% de _b_, sólo es necesario que por ejemplo B sea 0.4 y C 0.6 para que _a_ coma terreno a _b_. Y en este caso se observa _i_ con B < C.
 
 ### Programas
 
