--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -8,7 +8,7 @@ author: codelrond
 
 ### Definición inicial:
 
-Si _a_ actúa en forma _i_ sobre _b_, podemos:
+Si _a_ actúa en forma _i_ sobre _b_, podemos tener:
 
 - 0 probabilidad que _b_ tenga el determinante _i_
 
@@ -17,12 +17,6 @@ Si _a_ actúa en forma _i_ sobre _b_, podemos:
 - probabilidad > 0 que _b_ tenga el determinante _i_
 
     la reaparición de _i_ puede venir por descendencia de _a_ ó _b_. Un caso particular es que _a_ no tenga descendencia.
-
-### Sobre "La acción que más produce réplica de mis genes."
-
-Ante el evento _e_: Si _x_ hace _i_ entonces tenemos una producción de _x_, y si hace _j_ entonces tenemos otra producción de x. Para _i_ tenemos un coste C (la producción que se pierde por no hacerse _j_) y un beneficio B que es la producción por hacerse _i_. Según la teoría del gen egoista B > C es condición necesaria para que se observe _i_. ¿Acaso se podría argumentar de alguna manera posible lo contrario?
-
-Vamos a demostrar que eso no es exactamente así: el problema es que si partimos del determinismo, entonces ante el evento _e_, el determinante _i_ (ya no hablamos de _x_ sino de _a_) implica acción _i_ y el determinante _j_ (_b_) implica acción _j_. Hay una producción de _a_, que es el B anterior, y una producción de _b_ que es el C anterior. Y dada una población con 30% de _a_ y 70% de _b_, sólo es necesario que por ejemplo B sea 0.4 y C 0.6 para que _a_ coma terreno a _b_. Y en este caso se observa _i_ con B < C.
 
 ### Programas
 
