--- a/src/routes/blog/2.md
+++ b/src/routes/blog/2.md
@@ -1,6 +1,6 @@
 ---
 title: Condición de altruismo
-date: "2022-06-03"
+date: "2022-06-04"
 author: codelrond
 ---
 
@@ -8,6 +8,8 @@ author: codelrond
 
 ### Sobre "La acción que produce más réplica de mis genes."
 
-Ante el evento _e_: Si _x_ hace _i_ entonces tenemos una producción de _x_, y si hace _j_ entonces tenemos otra producción de x. Para _i_ tenemos un coste C (la producción que se pierde por no hacerse _j_) y un beneficio B que es la producción por hacerse _i_. Según la teoría del gen egoista B > C es condición necesaria para que se observe _i_. ¿Acaso se podría argumentar de alguna manera posible lo contrario?
+Ante el evento _e_: 
+
+Si _x_ hace _i_ entonces tenemos una producción de _x_, y si hace _j_ entonces tenemos otra producción de _x_. Para _i_ tenemos un coste C (la producción que se pierde por no hacerse _j_) y un beneficio B que es la producción por hacerse _i_. Según la teoría del gen egoista B > C es condición necesaria para que se observe _i_. **¿Acaso se podría argumentar de alguna manera posible lo contrario?**
 
 Vamos a demostrar que eso no es exactamente así: el problema es que si partimos del determinismo, entonces ante el evento _e_, el determinante _i_ (ya no hablamos de _x_ sino de _a_) implica acción _i_ y el determinante _j_ (_b_) implica acción _j_. Hay una producción de _a_, que es el B anterior, y una producción de _b_ que es el C anterior. Y dada una población con 30% de _a_ y 70% de _b_, sólo es necesario que por ejemplo B sea 0.4 y C 0.6 para que _a_ coma terreno a _b_. Y en este caso se observa _i_ con B < C.
