--- a/src/routes/blog/2.md
+++ b/src/routes/blog/2.md
@@ -10,6 +10,6 @@ author: codelrond
 
 Ante el evento _e_: 
 
-Si _x_ hace _i_ entonces tenemos una producción de _x_, y si hace _j_ entonces tenemos otra producción de _x_. Para _i_ tenemos un coste C (la producción que se pierde por no hacerse _j_) y un beneficio B que es la producción por hacerse _i_. Según la teoría del gen egoista B > C es condición necesaria para que se observe _i_. **¿Acaso se podría argumentar de alguna manera posible lo contrario?**
+Si _x_ hace _i_ entonces tenemos una producción de _x_, y si hace _j_ entonces tenemos otra producción de _x_. Para _x_, cuando se hace _i_ tenemos un coste C (la producción que se pierde por no hacerse _j_) y un beneficio B que es la producción por hacerse _i_. Según la teoría del gen egoista B > C es condición necesaria para que se observe _i_. **¿Acaso se podría argumentar de alguna manera posible lo contrario?**
 
-Vamos a demostrar que eso no es exactamente así: el problema es que si partimos del determinismo, entonces ante el evento _e_, el determinante _i_ (ya no hablamos de _x_ sino de _a_) implica acción _i_ y el determinante _j_ (_b_) implica acción _j_. Hay una producción de _a_, que es el B anterior, y una producción de _b_ que es el C anterior. Y dada una población con 30% de _a_ y 70% de _b_, sólo es necesario que por ejemplo B sea 0.4 y C 0.6 para que _a_ coma terreno a _b_. Y en este caso se observa _i_ con B < C.
+Vamos a demostrar que eso no es exactamente así: el problema es que si partimos del determinismo, entonces ante el evento _e_, el determinante _i_ implica acción _i_ y el determinante _j_ implica acción _j_. Y ya no hablamos de _x_ sino de _a_ y _b_ por ejemplo. Hay una producción de _a_, que es el B anterior, y una producción de _b_ que es el C anterior. Y dada una población con 30% de _a_ y 70% de _b_, sólo es necesario que por ejemplo B sea 0.4 y C 0.6 para que _a_ coma terreno a _b_. Y en este caso se observa _i_ con C > B.
