--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -22,3 +22,9 @@ Si _a_ actúa en forma _i_ sobre _b_, podemos tener:
 
 Decimos que _a<sub>1</sub>_ y _a<sub>2</sub>_ son instancias del programa _p_, _b<sub>1</sub>_ y _b<sub>2</sub>_ son instancias del programa _q_.
 
+Decimos que ante un evento _e_, los programas _p_ actúan con _i_ y los programas _q_ con _j_.
+
+Supongamos que sin evento _e_ ambos _p_ y _q_ producen igual, pero con _e_ tenemos que _p_ produce más que _q_. Supongamos una población 30% de _p_ y 70% de _q_. Ante _e_ supongamos que la producción es 40% vs. 60%. A más eventos _e_ más terreno come _p_ acercándose al 40% del total.
+
+Cuando se dice <code>b > cr</code>, se está diciendo que el beneficio sobre el receptor debe ser mayor que el coste en el emisor (teniendo en cuenta la relación _r_ de parentesco). Pero el coste aquí expresado es la producción de q, y el beneficio la producción de p. **No** el beneficio respecto de un coste en un alelo _x_.
+
