chat in gitter md as component

--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -4,8 +4,6 @@ date: "2022-06-03"
 author: codelrond
 ---
 
-[![Gitter](https://badges.gitter.im/logic-replication/community.svg)](https://gitter.im/logic-replication/community?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge)
-
 ### Definición inicial:
 
 Si _a_ actúa en forma _i_ sobre _b_, podemos tener:
@@ -28,4 +26,4 @@ Supongamos que sin evento _e_ ambos _p_ y _q_ producen igual, pero con _e_ tenem
 
 Cuando se dice <code>b > cr</code>, se está diciendo que el beneficio sobre el receptor debe ser mayor que el coste en el emisor (teniendo en cuenta la relación _r_ de parentesco). Pero el coste aquí expresado es la producción de q, y el beneficio la producción de p. Es decir, si dado un programa que hace _i_ con un beneficio, si estimamos como sería con _j_ para calcular un coste, al ser programas, ya no sería _p_ sino _q_.
 
-Por el contrario supongamos un _x_ en una caja que produce 1, y utro _x_ en otra caja que produce 2. Yo puedo encender sólo una de las cajas. Si enciendo la primera, el coste es 2. ¿En que se diferencia este caso con lo anterior? Pues que _x_ es una instancia de _w_ por ejemplo y se pueden contar sus costes según se encienda una caja u otra pues soy yo el que decido, **no** _x_.
+Por el contrario supongamos un _x_ en una caja que produce 1, y otro _x_ en otra caja que produce 2. (Cada caja es un contexto diferente). Yo puedo encender sólo una de las cajas. Si enciendo la primera, el coste es 2. Estamos hablando del coste de la persona que decide, porque no podemos determinar su acción.
