--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -22,8 +22,12 @@ Decimos que _a<sub>1</sub>_ y _a<sub>2</sub>_ son instancias del programa _p_, _
 
 Decimos que ante un evento _e_, los programas _p_ actúan con _i_ y los programas _q_ con _j_.
 
+### Situación
+
 Supongamos que sin evento _e_ ambos _p_ y _q_ producen igual, pero con _e_ tenemos que _p_ produce más que _q_. Supongamos una población 30% de _p_ y 70% de _q_. Ante _e_ supongamos que la producción es 40% vs. 60%. A más eventos _e_ más terreno come _p_ acercándose al 40% del total.
 
-Cuando se dice <code>b > cr</code>, se está diciendo que el beneficio sobre el receptor debe ser mayor que el coste en el emisor (teniendo en cuenta la relación _r_ de parentesco). Pero el coste aquí expresado es la producción de q, y el beneficio la producción de p. Es decir, si dado un programa que hace _i_ con un beneficio, si estimamos como sería con _j_ para calcular un coste, al ser programas, ya no sería _p_ sino _q_.
+### Una confusión sobre identidad y elección
 
-Por el contrario supongamos un _x_ en una caja que produce 1, y otro _x_ en otra caja que produce 2. (Cada caja es un contexto diferente). Yo puedo encender sólo una de las cajas. Si enciendo la primera, el coste es 2. Estamos hablando del coste de la persona que decide, porque no podemos determinar su acción.
+Cuando se dice <code>b > cr</code>, se está diciendo que el beneficio sobre el receptor debe ser mayor que el coste en el emisor (teniendo en cuenta la relación _r_ de parentesco). Pero el coste aquí expresado es la producción de q (situación anterior), y el beneficio la producción de p.
+
+Por el contrario supongamos un _x_ en una caja que produce 1, y otro _x_ en otra caja que produce 2. (Cada caja es un contexto diferente). Yo puedo encender sólo una de las cajas. Si enciendo la primera, el coste es 2. Estamos hablando del coste de la persona que decide, porque no podemos determinar su acción, es decir, hay generación espontánea de información en la persona.
