--- a/src/routes/blog/2.md
+++ b/src/routes/blog/2.md
@@ -1,13 +1,26 @@
 ---
-title: Condición de altruismo
-date: "2022-06-04"
+title: No parientes y con probabilidad
+date: "2022-06-05"
 author: codelrond
 ---
 
-### Sobre "La acción que produce más réplica de mis genes."
+Definición: b<sup>+</sup> es b ó alguno de sus descendientes.
 
-Ante el evento _e_: 
+- Existe una relación no falsificable entre una característica física observable _c_ y la acción _i_. Por ejemplo _i_ es ayudar al que tiene la cresta roja, y si tiene cresta roja entonces tiene el determinante _i_.
 
-Si _x_ hace _i_ entonces tenemos una producción de _x_, y si hace _j_ entonces tenemos otra producción de _x_. Para _x_, cuando se hace _i_ tenemos un coste C (la producción que se pierde por no hacerse _j_) y un beneficio B que es la producción por hacerse _i_. Según la teoría del gen egoista B > C es condición necesaria para que se observe _i_. **¿Acaso se podría argumentar de alguna manera posible lo contrario?**
+    - _a_ actúa sobre un menor _b_:
 
-Vamos a demostrar que eso no es exactamente así: el problema es que si partimos del determinismo, entonces ante el evento _e_, el determinante _i_ implica acción _i_ y el determinante _j_ implica acción _j_. Y ya no hablamos de _x_ sino de _a_ y _b_ por ejemplo. Hay una producción de _a_, que es el B anterior, y una producción de _b_ que es el C anterior. Y dada una población con 30% de _a_ y 70% de _b_, sólo es necesario que por ejemplo B sea 0.4 y C 0.6 para que _a_ coma terreno a _b_. Y en este caso se observa _i_ con C > B.
+        - _a'_ actúa posteriormente sobre _a_ que es menor que _a'_. Así sucesivamente hay un problema ya que necesitamos infinitos mayores, pero dada cierta edad se muere.
+        - _b_ posteriormente actúa sobre un menor _c_.
+    
+    - _a_ actúa sobre un mayor _b_:
+
+        - _b_ actúa sobre un mayor _c_. No se continúa pues hay muerte por edad.
+        - _c_ actúa sobre el mayor _a_: _c_ puede ser descendiente de _b_.
+
+- En otro caso: supongamos que vemos a --(i)--> b<sup>+</sup>. Si volvemos a verlo puede ser:
+
+    - b --(i)--> c en momento anterior y _a_ lo observó.
+    - b --(i)--> a en momento anterior. La última iteración se escapa.
+    - b es descendiente de a.
+    - b es pariente no descendiente de a.
