--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -6,6 +6,8 @@ author: codelrond
 
 ### Definición inicial:
 
+_i_: identificación + interacción sobre el identificado.
+
 Si _a_ actúa en forma _i_ sobre _b_, podemos tener:
 
 - 0 probabilidad que _b_ tenga el determinante _i_
