--- a/src/routes/blog/2.md
+++ b/src/routes/blog/2.md
@@ -20,7 +20,17 @@ Definición: b<sup>+</sup> es b ó alguno de sus descendientes.
 
 - En otro caso: supongamos que vemos a --(i)--> b<sup>+</sup>. Si volvemos a verlo puede ser:
 
-    - b --(i)--> c en momento anterior y _a_ lo observó.
-    - b --(i)--> a en momento anterior. La última iteración se escapa.
-    - b es descendiente de a.
-    - b es pariente no descendiente de a.
+    - no parientes:
+
+        - b --(i)--> c en momento anterior y _a_ lo observó.
+        - b --(i)--> a en momento anterior. La última iteración se escapa.
+
+        La certeza que tiene _a_ de _b_ es mayor que la que tiene del resto de _b<sup>+</sup>_.
+
+    - parientes: (lo anterior se puede dar además de lo que se expone a continuación)
+
+        - (1) b es descendiente de a. Ej: ayudo al hijo. ¿Ha podido observar al hijo además?
+        - a es descendiente de b. Ej: ayudo al padre. El hijo ha podido observar al padre además.
+        - b es pariente no descendiente de a (se sigue que _a_ también es pariente no descendiente de _b_). Ej: ayudo a un hermano o un primo. Ha podido observarlo antes.
+
+1- A un padre le interesa una producción promedio de sus hijos alta, aún cuando en casos concretos un hijo pueda tener una producción baja. Si un padre sacrifica para ello a un hijo, el hijo compite con sus hermanos por no ser el sacrificado.
