--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -24,12 +24,9 @@ Decimos que _a<sub>1</sub>_ y _a<sub>2</sub>_ son instancias del programa _p_, _
 
 Decimos que ante un evento _e_, los programas _p_ actúan con _i_ y los programas _q_ con _j_.
 
+
 ### Situación
 
-Supongamos que sin evento _e_ ambos _p_ y _q_ producen igual, pero con _e_ tenemos que _p_ produce más que _q_. Supongamos una población 30% de _p_ y 70% de _q_. Ante _e_ supongamos que la producción es 40% vs. 60%. A más eventos _e_ más terreno come _p_ acercándose al 40% del total.
+Supongamos que sin evento _e_ ambos _p_ y _q_ producen igual, pero con _e_ tenemos que _p_ produce más que _q_. Supongamos una población 30% de _p_ y 70% de _q_. Ante _e_ supongamos que la producción es 40% vs. 60%. A más eventos _e_ más terreno come _p_ acercándose al 40% del total. Es posible que _p_ consista en que ante _e_ un individuo concreto se sacrifica en beneficio de otros.
 
-### Una confusión sobre identidad y elección
-
-Cuando se dice <code>b > cr</code>, se está diciendo que el beneficio sobre el receptor debe ser mayor que el coste en el emisor (teniendo en cuenta la relación _r_ de parentesco). Pero el coste aquí expresado es la producción de q (situación anterior), y el beneficio la producción de p.
-
-Por el contrario supongamos un _x_ en una caja que produce 1, y otro _x_ en otra caja que produce 2. (Cada caja es un contexto diferente). Yo puedo encender sólo una de las cajas. Si enciendo la primera, el coste es 2. Estamos hablando del coste de la persona que decide, porque no podemos determinar su acción, es decir, hay generación espontánea de información en la persona.
+En el siguiente [artículo](/blog/2) comentamos restricciones sobre los programas de la clase _p_.
