--- a/src/routes/blog/2.md
+++ b/src/routes/blog/2.md
@@ -27,10 +27,15 @@ Definición: b<sup>+</sup> es b ó alguno de sus descendientes.
 
         La certeza que tiene _a_ de _b_ es mayor que la que tiene del resto de _b<sup>+</sup>_.
 
-    - parientes: (lo anterior se puede dar además de lo que se expone a continuación)
+    - parientes, burbuja de parentesco: (lo anterior se puede dar además de lo que se expone a continuación)
 
-        - (1) b es descendiente de a. Ej: ayudo al hijo. ¿Ha podido observar al hijo además?
-        - a es descendiente de b. Ej: ayudo al padre. El hijo ha podido observar al padre además.
-        - b es pariente no descendiente de a (se sigue que _a_ también es pariente no descendiente de _b_). Ej: ayudo a un hermano o un primo. Ha podido observarlo antes.
+        Supongamos _p_ y _q_ donde ambos son de la clase "altruista de parentesco". _p_ está sobre _q_ si a igualdad de condiciones prefiere un pariente del árbol propio a uno que no lo es. Otro caso es que _p_ está sobre _q_ si dentro del propio árbol, prefiere a un descendiente antes que a un ascendiente.
 
-1- A un padre le interesa una producción promedio de sus hijos alta, aún cuando en casos concretos un hijo pueda tener una producción baja. Si un padre sacrifica para ello a un hijo, el hijo compite con sus hermanos por no ser el sacrificado.
+        Esto es debido al fenómeno "mutation friendly".
+
+
+### Una confusión sobre identidad y elección
+
+Cuando se dice <code>b > cr</code>, se está diciendo que el beneficio sobre el receptor debe ser mayor que el coste en el emisor (teniendo en cuenta la relación _r_ de parentesco). Pero el coste aquí expresado es la producción de q (situación anterior), y el beneficio la producción de p.
+
+Por el contrario supongamos un _x_ en una caja que produce 1, y otro _x_ en otra caja que produce 2. (Cada caja es un contexto diferente). Yo puedo encender sólo una de las cajas. Si enciendo la primera, el coste es 2. Estamos hablando del coste de la persona que decide, porque no podemos determinar su acción, es decir, hay generación espontánea de información en la persona.
