fixed mutation friendly

--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -30,3 +30,7 @@ Decimos que ante un evento _e_, los programas _p_ actúan con _i_ y los programa
 Supongamos que sin evento _e_ ambos _p_ y _q_ producen igual, pero con _e_ tenemos que _p_ produce más que _q_. Supongamos una población 30% de _p_ y 70% de _q_. Ante _e_ supongamos que la producción es 40% vs. 60%. A más eventos _e_ más terreno come _p_ acercándose al 40% del total. Es posible que _p_ consista en que ante _e_ un individuo concreto se sacrifica en beneficio de otros.
 
 En el siguiente [artículo](/blog/2) comentamos restricciones sobre los programas de la clase _p_.
+
+### Mutation friendly
+
+Supongamos que ocurren interacciones al azar, beneficiosas para el receptor. Si ocurre una mutación _m_ que hace que la interacción sea hacia el hijo, el hijo recibe tanto ese beneficio como el correspondiente por el azar. Razón por la que la interacción hacia el hijo desplaza a la interacción al azar.
