--- a/src/routes/blog/2.md
+++ b/src/routes/blog/2.md
@@ -29,9 +29,7 @@ Definición: b<sup>+</sup> es b ó alguno de sus descendientes.
 
     - parientes, burbuja de parentesco: (lo anterior se puede dar además de lo que se expone a continuación)
 
-        Supongamos _p_ y _q_ donde ambos son de la clase "altruista de parentesco". _p_ está sobre _q_ si a igualdad de condiciones prefiere un pariente del árbol propio a uno que no lo es. Otro caso es que _p_ está sobre _q_ si dentro del propio árbol, prefiere a un descendiente antes que a un ascendiente.
-
-        Esto es debido al fenómeno "mutation friendly".
+        Supongamos _p_ y _q_ donde ambos son de la clase "altruista de parentesco". _p_ está sobre _q_ si a igualdad de condiciones prefiere un descendiente del árbol propio a uno que no lo es. Esto es debido al fenómeno "mutation friendly".
 
 
 ### Una confusión sobre identidad y elección
